--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <title>BookList</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -7,6 +7,14 @@
 </head>
 <body>
 	<h1>Books</h1>
+	<div class="col-md-4">
+		<h2 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h2>
+	</div>
+	<div class="col-md-4" style="padding:20px 0">
+		<form th:action="@{/logout}" method="post">
+			<input type="submit" value="Sign Out" class="btn btn-danger"/>
+		</form>
+	</div>
     <table class="table table-hover">
 		<tr>
 		    <th>Title</th>
@@ -22,7 +30,7 @@
     		<td th:text="${book.isbn}"></td>
     		<td th:text="${book.price}"></td>
     		<td th:text="${book.category.name}"></td>
- 			<td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+ 			<td sec:authorize="hasRole('ADMIN')" ><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
     	</tr>
      </table>
 	 <a class="btn btn-success" href="/add">Add new book</a>
