--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -30,7 +30,7 @@
     		<td th:text="${book.isbn}"></td>
     		<td th:text="${book.price}"></td>
     		<td th:text="${book.category.name}"></td>
- 			<td sec:authorize="hasRole('ADMIN')" ><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
+ 			<td sec:authorize="hasAuthority('ADMIN')" ><a class="btn btn-danger" th:href="@{/delete/{id}(id=${book.id})}">Delete</a></td>
     	</tr>
      </table>
 	 <a class="btn btn-success" href="/add">Add new book</a>
